k8s/firefox/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
  namespace: firefox
  labels:
    app: firefox
spec:
  selector:
    matchLabels:
      app: firefox
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: firefox
      labels:
        app: firefox
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Paris
          image: lscr.io/linuxserver/firefox:1150.0.1
          name: firefox
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: firefox
              mountPath: /config
              subPath: config
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: firefox
          persistentVolumeClaim:
            claimName: firefox
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: "1Gi"
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: firefox
  namespace: firefox
spec:
  selector:
    app: firefox
  type: ClusterIP
  ports:
    - name: firefox
      port: 3000
      targetPort: 3000
---
