k8s/firefox/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefox-route
  namespace: firefox
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
  hostnames:
    - "firefox.neffi.fr"
  rules:
    - backendRefs:
        - name: firefox
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
